@@ -1506,12 +1506,12 @@ test(505, DT[J(a=1,b=6),sum(i.b*b)]$V1, 24)  # 24 now 'double' because i.b is 'd
 
 # Test := after a key<-
 DT = data.table(a=3:1,b=4:6)
-test(506, key(DT)<-"a", warning="copies the whole table")
+test(506, key(DT)<-"a", warning="can copy the whole table")
 test(507, suppressWarnings(key(DT)<-"a"), "a")
 test(508, DT, data.table(a=1:3,b=6:4,key="a"))
 test(509, DT[,b:=10L], data.table(a=1:3,b=10L,key="a"))
-test(510, DT[,c:=11L], warning="Invalid .internal.selfref detected and fixed by taking a copy of the whole table")
-test(511, suppressWarnings(DT[,c:=11L]), data.table(a=1:3,b=10L,c=11L,key="a"))
+test(510, DT[,c:=11L], data.table(a=1:3,b=10L,c=11L,key="a"))  # Used to be warning about invalid .internal.selfref detected and fixed. As from v1.8.3 data.table() returns a NAMED==0 object, and key<- appears not to copy that. But within functions, key<- would still copy. TO DO: add tests.... 
+#test(511,)
 
 # Test new functons chmatch and %chin%
 y=letters
@@ -1811,10 +1811,9 @@ test(632, merge(DT1,DT2,all=TRUE), data.table(a=c(1,2,3,4,5),total.x=c(2,NA,1,3,
 test(632.1, merge(DT1,DT2,all=TRUE), setkey(adt(merge(adf(DT1),adf(DT2),by="a",all=TRUE)),a))
 
 # Test that unsettting datatable.alloccol is caught, #2014
-old = getOption("datatable.alloccol")
-options(datatable.alloccol=NULL)
+old = options(datatable.alloccol=NULL)
 test(633, data.table(a=1:3), error="n must be integer length 1")
-options(datatable.alloccol=old)
+options(old)
 
 # Test that with=FALSE by number isn't messed up by dup column names, #2025
 DT = data.table(a=1:3,a=4:6)
@@ -2293,6 +2292,26 @@ DT = data.table(a=1:10)
 test(840, last(DT), DT[10])
 test(841, last(1:10), 10L)
 test(842, last(list("a",1:2,89)), 89)
+
+# Test L[[1L]][,:=] updates by reference, #2204
+l = list(data.table(a=1:3), data.table(b=4:6))
+test(843, l[[2L]][,c:=7:9], data.table(b=4:6,c=7:9))
+test(844, l, list(data.table(a=1:3), data.table(b=4:6,c=7:9)))
+names(l) = c("foo","bar")   # copies all the contents, too
+test(845, l[["foo"]][2,d:=4], warning="Invalid .internal.selfref detected and fixed")
+l = list(data.table(a=1:3), data.table(b=4:6))
+setattr(l,"names",c("foo","bar"))
+test(846, l[["foo"]][2,d:=4], data.table(a=1:3,d=c(NA,4,NA)))
+test(847, l, list(foo=data.table(a=1:3,d=c(NA,4,NA)), bar=data.table(b=4:6)))
+old=options(datatable.alloccol=2)
+l = list(foo=data.table(a=1:3,b=4:6),bar=data.table(c=7:9,d=10:12))
+test(848, truelength(l[[1]]), 2L)
+test(849, {l[[1L]][,e:=13:15]; l[[1L]]}, data.table(a=1:3,b=4:6)[,e:=13:15])
+test(850, truelength(l[[1]]), 102L)
+test(851, truelength(l[[2]]), 2L)
+l[["bar"]][,f:=16:18]
+test(852, truelength(l[[2L]]), 102L)
+options(old)
 
 # TO DO:
 #DT = data.table(a=1:3,b=1:6,key="a")
