@@ -32,4 +32,23 @@ SEXP copyattr(SEXP from, SEXP to)
     return(R_NilValue);
 }
 
+SEXP setlistelt(SEXP l, SEXP i, SEXP value)
+{
+    R_len_t i2;
+    // Internal use only. So that := can update elements of a list of data.table, #2204. Just needed to overallocate/grow the VECSXP.
+    if (!isNewList(l)) error("First argument to setlistelt must be a list()");
+    if (!isInteger(i) || LENGTH(i)!=1) error("Second argument to setlistelt must a length 1 integer vector");
+    i2 = INTEGER(i)[0];
+    if (LENGTH(l) < i2 || i2<1) error("i (%d) is outside the range of items [1,%d]",i2,LENGTH(l));
+    SET_VECTOR_ELT(l, i2-1, value);
+    return(R_NilValue);
+}
+
+SEXP setnamed(SEXP x, SEXP value)
+{
+    if (!isInteger(value) || LENGTH(value)!=1) error("Second argument to setnamed must a length 1 integer vector");
+    SET_NAMED(x,INTEGER(value)[0]);
+    return(x);
+}
+
 
